# GameBoyStory

./: 00Names.hpp  01Utils.cpp  02API.cpp  03Menu.cpp  04UI.cpp  05Scripting.cpp  Asteroids.cpp  Events.cpp  GameBoy.ino  GameBoyStory.ino  GameBoyStory.todo  Mario.cpp  MjpegClass.h  OreAssetEditor.code-workspace  README.md  Tetris.cpp  asteroids.cpp  av.cpp  data.hpp  games.hpp  hw.cpp
.github/ISSUE_TEMPLATE/: bug_report.md
Models/: CaseBottom.FCStd  CaseBottom.stl
OldArduino/: 00Names.hpp  02API.cpp  03Global.cpp  04UI.cpp  05Scripting.cpp  Asteroids.cpp  Events.cpp  GameBoyStory.ino  Mario.cpp  Tetris.cpp  data.hpp  story.cpp
game-boy-story/: Cargo.toml  image2raw.py
game-boy-story/.cargo/: config.toml
game-boy-story/assets/menu/: item_frame.raw  item_select.raw  menu.raw
game-boy-story/src/: hub.rs  main.rs  math.rs  scripting.rs  ui.rs
game-boy-story/src/engine/: tiles.rs
game-boy-story/src/games/: story.rs
game-boy-story/src/games/mario/: components.rs  mod.rs
game-boy-story/src/hal/: api.rs  hardware.rs  sd.rs
res/: Team.docx
res/Mario/Project/: atlases.json  components.json  data.hpp  maps.json
res/Mario/Project/atlases/: .Items.atl  0 - Tileset.atl  Characters - Mario.atl  Interactibles - TicketTrader.atl  Interactibles - Train.atl  System - LevelTransition.atl
res/Mario/Project/atlases/0 -Tilesets/: 2 - CityTileset.atl
res/Mario/Project/atlases/1 - Interactibles/: 0 - Mario.atl  0.2 - MarioFlipping.atl  1 - Luigi.atl  3 - TicketTrader.atl
res/Mario/Project/atlases/2 - Visual/: 0 - Door.atl  1 - Locomotive.atl  2 - Train.atl  3 - Rack.atl  4 - Small Rack.atl  Interactibles - Locomotive.atl  Interactibles - Train.atl
res/Mario/Project/atlases/3 - Ambient/: 0 - TeslaCoil.atl  3 - FireworkGreen.atl
res/Mario/Project/components/0 - System/: 0 - LevelTransition.cmp  0 - Portal.cmp  1 - HRoom.cmp
res/Mario/Project/components/1 - Story/: 1 - StoryObject.cmp
res/Mario/Project/levels/: 0 - Mario's house.lvl  1 - Mushroom Kingdom.lvl  2 - TrainStation.lvl  4 - City.lvl
res/Mario/Project/maps/: 0 - Mario's house.map  1 - Mushroom Kingdom.map  2 - TrainStation.map
res/Mario/Project/maps/0 - Mushroom Kingdom/: 0 - Mario's house.map  1 - Mushroom Kingdom.map  2 - TrainStation.map
(+23 files in other folders)
